@@ -139,10 +139,9 @@ SPACE_WARN
 
         # If ExtUtils::Manifest isn't included don't include MANIFEST.SKIP
         # either.
-        my $maniskip_key    = grep /MANIFEST.SKIP$/i, keys %{$self->{PM}};
-        my $manifest_pm_key = grep /Manifest.pm$/i,   keys %{$self->{PM}};
+        my($maniskip_key)    = grep /MANIFEST\.SKIP$/i, keys %{$self->{PM}};
         delete $self->{PM}{$maniskip_key} unless
-          exists $self->{PM}{$manifest_pm_key};
+            grep /Manifest\.pm$/i, keys %{$self->{PM}};
     }
 
     sub _find_installed {
